fixed issue in body hwere text wouldnt wrap and would break even spacing for flex items

--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ body{
     padding: 25px;
     font-size: 36px;
     color: #1f2937;
-
+    text-align: center;
 }
 
 .image-text-container{
@@ -132,9 +132,8 @@ body{
     flex-direction: column;
     align-items: center;
     text-align: center;
-    justify-content: space-between;
+    justify-content: space-evenly;
     gap: 10px;
-
 }
 
 .option{
@@ -149,8 +148,12 @@ body{
 }
 
 .text{
-    width: auto;
+    max-width: 300px;
+    max-height: 200px;
+    width: 100%;
     height: auto;
+    flex-wrap: wrap;
+    flex: 1 1 200px;
 }
 
 /* quote formatting */
